Fix console artifact path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,4 +51,4 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact_console-windows
-        path: ./WolvenKit.CLI/bin/Release/net5.0-windows
+        path: ./WolvenKit.CLI/bin/Release/net5.0
