--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -71,13 +71,13 @@
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+    <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.2" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.0" />
 
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
-    <ProjectReference Include="..\WolvenKit.RED4.CR2W\WolvenKit.RED4.CR2W.csproj" />
-    <ProjectReference Include="..\WolvenKit.RED3.CR2W\WolvenKit.RED3.CR2W.csproj" />
   </ItemGroup>
 
 </Project>
