--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -39,8 +39,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: https://uploads.github.com/repos/WolvenKit/Wolven-kit/releases/11743470/assets{?name,label}
+        # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and 
+        # copy the full "upload_url" value including the {?name,label} part
+        upload_url: https://uploads.github.com/repos/WolvenKit/WolvenKit/releases/11743470/assets{?name,label}
+        # same as above (id can just be taken out the upload_url, it's used to find old releases)
         release_id: 11743470
+        # path to archive to upload
         asset_path: wolvenkit.zip
+        # name to upload the release as, use $$ to insert date (YYYYMMDD) and 6 letter commit hash
         asset_name: WolvenKit-Nightly-$$.zip
+        # required by GitHub API
         asset_content_type: application/zip
