use dotnet publish for CI

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - stable
  
 jobs:
 
@@ -33,19 +33,26 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.100
+        
     - name: dotnet clean
       run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
     - name: dotnet restore
       run: dotnet restore ./WolvenKit.sln 
 
-    - name: dotnet build WolvenKit.sln
-      run: dotnet build ./WolvenKit.sln --configuration Release --no-restore
+    - uses: naminodarie/get-net-sdk-project-versions-action@v1
+      id: get-version
+      with:
+        proj-path: ./WolvenKit/WolvenKit.UI.csproj
+    - run: echo "${{steps.get-version.outputs.version}}"
+
+    - name: dotnet publish WolvenKit.sln
+      run: dotnet publish ./WolvenKit/WolvenKit.UI.csproj -o publish --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
 
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.2.1
+      uses: actions/upload-artifact@v2
       with:
         name: artifact_wkit-windows
-        path: ./WolvenKit/bin/Release/net5.0-windows
+        path: ./publish
 
     - name: zip
       uses: papeloto/action-zip@v1
@@ -82,7 +89,7 @@ jobs:
       run: dotnet build ./CP77Tools.sln --configuration Release --no-restore
 
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.2.1
+      uses: actions/upload-artifact@v2
       with:
         name: artifact_console-windows
         path: ./WolvenKit.CLI/bin/Release
