--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -22,19 +22,20 @@ jobs:
       run: dotnet restore ./WolvenKit.sln 
 
     - name: dotnet publish WolvenKit
-      run: dotnet publish ./WolvenKit/WolvenKit.UI.csproj -o publish/nightly --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
+      run: dotnet publish ./WolvenKit/WolvenKit.UI.csproj -o publish/app/nightly --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: artifact_wkit-windows
-        path: ./publish/nightly
+        name: wolvenkit-nightly
+        path: ./publish/app
 
     - name: zip
       uses: papeloto/action-zip@v1
       with:
-        files: ./publish/nightly
+        files: ./publish/app
         dest: wolvenkit.zip
+
     - name: Deploy Nightly
       uses: WebFreak001/deploy-nightly@v1.1.0
       env:
