--- a/.github/workflows/draft_console.yml
+++ b/.github/workflows/draft_console.yml
@@ -44,25 +44,26 @@ jobs:
     - run: echo "${{steps.get-version.outputs.version}}"
 
     - name: dotnet publish WolvenKit.Console
-      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o publish/console/${{steps.get-version.outputs.version}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
+      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o publish/console/wolvenkit-console-${{steps.get-version.outputs.version}} -p:PublishSingleFile=true --no-self-contained -r win-x64 -c Release -f net5.0
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: artifact_console-windows
-        path: ./publish/console/${{steps.get-version.outputs.version}}
+        name: console-${{steps.get-version.outputs.version}}
+        path: ./publish/console
 
     - name: zip
       uses: papeloto/action-zip@v1
       with:
-        files: ./publish/console/${{steps.get-version.outputs.version}}
-        dest: wolvenkit_console-${{steps.get-version.outputs.version}}.zip
+        files: ./publish/console
+        dest: wolvenkit-console-${{steps.get-version.outputs.version}}.zip
+
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{needs.create_release.outputs.upload_url }}
-        asset_path: ./wolvenkit_console-${{steps.get-version.outputs.version}}.zip
+        asset_path: ./wolvenkit-console-${{steps.get-version.outputs.version}}.zip
         asset_name: wolvenkit_console-${{steps.get-version.outputs.version}}.zip
         asset_content_type: application/zip
