--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,13 @@ jobs:
     - run: echo "${{steps.get-version.outputs.version}}"
 
     - name: dotnet publish WolvenKit
-      run: dotnet publish ./WolvenKit/WolvenKit.UI.csproj -o publish/app/${{steps.get-version.outputs.version}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
+      run: dotnet publish ./WolvenKit/WolvenKit.UI.csproj -o publish/app/wolvenkit-${{steps.get-version.outputs.version}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: artifact_wkit-windows
-        path: ./publish/app/${{steps.get-version.outputs.version}}
+        name: wolvenkit-${{steps.get-version.outputs.version}}
+        path: ./publish/app
 
   check-console-win:
     runs-on: windows-latest
@@ -67,10 +67,10 @@ jobs:
     - run: echo "${{steps.get-version.outputs.version}}"
 
     - name: dotnet publish WolvenKit.Console
-      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o publish/console/${{steps.get-version.outputs.version}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
+      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o publish/console/wolvenkit-console-${{steps.get-version.outputs.version}} -p:PublishSingleFile=true --no-self-contained -r win-x64 -c Release -f net5.0
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: artifact_console-windows
-        path: ./publish/console/${{steps.get-version.outputs.version}}
+        name: console-${{steps.get-version.outputs.version}}
+        path: ./publish/console
