--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -18,6 +18,8 @@
       <FileVersion>2.3.0.0</FileVersion>
       <PackageOutputPath>./nupkg</PackageOutputPath>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+      <DebugType>embedded</DebugType>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -71,8 +73,8 @@
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
-    <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.2" />
-    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.0" />
+    <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.3" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.1" />
 
   </ItemGroup>
 
