--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <DebugType>embedded</DebugType>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +15,7 @@
       <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0022" />
     <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0022" />
-    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.0" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.1" />
   </ItemGroup>
     <ItemGroup>
         <Content Include="opus-tools\opusdec.exe">
