--- a/.github/workflows/draft_console.yml
+++ b/.github/workflows/draft_console.yml
@@ -63,7 +63,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{needs.create_release.outputs.upload_url }}
+        upload_url: ${{needs.create_release-console.outputs.upload_url }}
         asset_path: ./wolvenkit-console-${{steps.get-version.outputs.version}}.zip
         asset_name: wolvenkit_console-${{steps.get-version.outputs.version}}.zip
         asset_content_type: application/zip
