--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -66,7 +66,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{needs.create_release.outputs.upload_url }}
+        upload_url: ${{needs.create_release-app.outputs.upload_url }}
         asset_path: ./wolvenkit-${{steps.get-version.outputs.version}}.zip
         asset_name: wolvenkit-${{steps.get-version.outputs.version}}.zip
         asset_content_type: application/zip
@@ -114,7 +114,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{needs.create_release.outputs.upload_url }}
+        upload_url: ${{needs.create_release-app.outputs.upload_url }}
         asset_path: ./wolvenkit-console-${{steps.get-version.outputs.version}}.zip
         asset_name: wolvenkit_console-${{steps.get-version.outputs.version}}.zip
         asset_content_type: application/zip
