--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -63,4 +63,13 @@
 
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Ab3d.PowerToys.Assimp">
+      <HintPath>..\WolvenKit\Ab3d.PowerToys.Assimp.dll</HintPath>
+    </Reference>
+    <Reference Include="AssimpNet">
+      <HintPath>..\WolvenKit\AssimpNet.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
