505, 508 - Bugfixes and Converter Tool (#511)
* move function to common

* Update SettingsManager.cs

* Feature 505 import export tool converter (#509)

* Fix uncook - Ty Hitman , Fix Init Ty Potato_of_Doom ,

* Audio Preview Fix

* Converter Progress

* Converter

* Converter

* Converter finished but blocks slightly. Works though :)

* More Preview support for Model filetypes.

* Video Player fixes.

* Still blocks with those changes.

* bugfix, async

- fixed a bug where process all would crash
- async for process selected

Co-authored-by: rfuzzo <r.fuzzo@gmail.com>

* Squashed commit of the following:

commit 53032c3aef6a64d98b20d45bf02c34a378134084
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 17:40:40 2021 +0200

    bugfixes, version bump

    - fixed a bug where bin (unknown hash) files were not packed correctly

commit 52fe8a81cb027538510f2666e996ab3c88360782
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 16:27:30 2021 +0200

    fix set value bug

commit ef40b7e76794dfd5c299200aa9cbd2fd25c6d996
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 15:34:33 2021 +0200

    Update CommonFunctions.cs

Co-authored-by: Offline <11785451+Offline-R503B@users.noreply.github.com>

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -29,7 +29,9 @@
     <EmbeddedResource Remove="Model\Cr2w\**" />
     <None Remove="Extensions\PropertyGridEditors\**" />
     <None Remove="Model\Cr2w\**" />
+    <None Remove="Resources\missinghashes.txt" />
     <None Remove="Resources\unusedhashes.kark" />
+    <EmbeddedResource Include="Resources\missinghashes.txt" />
     <EmbeddedResource Include="Resources\unusedhashes.kark" />
     <None Remove="Resources\usedhashes.kark" />
     <EmbeddedResource Include="Resources\usedhashes.kark" />
@@ -74,7 +76,8 @@
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.3" />
-    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.1" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.2" />
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
 
   </ItemGroup>
 
