Squashed commit of the following:
commit 713c7ee3b6bdd771eeacb56e349d1521a787b4a1
Author: Offline <11785451+Offline-R503B@users.noreply.github.com>
Date:   Thu Jul 1 18:01:53 2021 +0200

    Feature 510 homepage pages overhaul (#512)

    * Added Kanban Nuget

    * Homepage Work :D

    * Remove userpage

    * Optimized Homepage

    * Optimize Homepage

    * Cleanup Project backup on My fork

    * Simple To Front fix

commit b1f9c9572adcc8d283eb5e18f1279b1915ef1d49
Merge: a59d880b9 78011553f
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 18:01:16 2021 +0200

    Merge branch 'master' into develop

commit a59d880b9a1c2306041c3f4ac327e415ba0c68e2
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 17:43:32 2021 +0200

    Squashed commit of the following:

    commit 53032c3aef6a64d98b20d45bf02c34a378134084
    Author: rfuzzo <r.fuzzo@gmail.com>
    Date:   Thu Jul 1 17:40:40 2021 +0200

        bugfixes, version bump

        - fixed a bug where bin (unknown hash) files were not packed correctly

    commit 52fe8a81cb027538510f2666e996ab3c88360782
    Author: rfuzzo <r.fuzzo@gmail.com>
    Date:   Thu Jul 1 16:27:30 2021 +0200

        fix set value bug

    commit ef40b7e76794dfd5c299200aa9cbd2fd25c6d996
    Author: rfuzzo <r.fuzzo@gmail.com>
    Date:   Thu Jul 1 15:34:33 2021 +0200

        Update CommonFunctions.cs

--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -352,6 +352,7 @@
     <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.SfKanban.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.1.0.63" />
