--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -28,7 +28,7 @@
         <PackageReference Include="CsvHelper" Version="27.1.0" />
         <PackageReference Include="protobuf-net.Core" Version="3.0.101" />
         <PackageReference Include="ReactiveUI" Version="14.1.1" />
-
+        <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
     </ItemGroup>
 
 </Project>
