--- a/WolvenManager.Installer/WolvenManager.Installer.csproj
+++ b/WolvenManager.Installer/WolvenManager.Installer.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
   </ItemGroup>
 
 </Project>
